Introduce ModEngine core class and refactor ESMM architecture
Major rewrite of ESMM’s internals around a new `ModEngine` core component:

- Added `ModEngine` class to centralize initialization and lifecycle management
- Integrated `SortManager`, `MloxManager`, `ConfigManager`, and `ModManager`
- Implemented robust mod discovery logic with cleaner separation of base game data
- Improved rule/config handling (ESMM rules, mlox base/user, openmw.cfg)
- Added path normalization utilities (e.g. common base finder)
- Enhanced logging for initialization and data flow

This change provides a clearer architecture for mod management, reduces
duplication between managers, and lays groundwork for extensibility.

--- a/openmw_esmm.ini
+++ b/openmw_esmm.ini
@@ -1,74 +1,123 @@
-# OpenMW ESMM - Default Sorting Rules
-#
-# This file provides a sensible default load order for many common mods.
-# The priority numbers determine the final order (lower numbers load earlier).
-# Items with the same priority are sorted alphabetically.
-# You can and should customize this file to your needs!
-
 [data]
+# ===========================================================================
+# OpenMW Data File Priority Rules
 # ---------------------------------------------------------------------------
-# Priority 0-99: Critical Dependencies & Foundational Data
-# These are shared assets that other major mods depend on. They MUST load first.
-# ---------------------------------------------------------------------------
-Tamriel Data*/*=10
+# Lower numbers have HIGHER priority (load EARLIER).
+# Higher numbers have LOWER priority (load LATER, and therefore WIN conflicts).
+#
+# The core principle is "General to Specific":
+# 1. Start with foundational data (Morrowind, TR/SHOTN/PC Data).
+# 2. Add bug fixes and essential patches.
+# 3. Add large-scale mesh and texture replacers that act as a new "base".
+# 4. Layer on more specific mods (environment, cities, characters).
+# 5. Load gameplay, quests, and new items.
+# 6. End with compatibility patches and user-specific overrides.
+# ===========================================================================
 
 # ---------------------------------------------------------------------------
-# Priority 100-199: Core Patches
-# Essential bug fixes that should affect everything that comes after.
+# Priority 0-999: Critical Dependencies & Foundational Data
+# These are master files or shared assets that other mods depend on.
+# They MUST load first, immediately after the base game data files.
 # ---------------------------------------------------------------------------
-Patch for Purists=100
+Tamriel Data*/*=100
+Skyrim*Data*/*=101
+Cyrodiil*Data*/*=102
 
 # ---------------------------------------------------------------------------
-# Priority 200-299: Performance & Mesh Optimization
-# Global mesh replacers that should load early to be overridden if needed.
+# Priority 1000-1999: Core Patches & Fixes
+# Essential unofficial patches that should affect everything that comes after.
 # ---------------------------------------------------------------------------
-Morrowind Optimization Patch/*=200
-Project Atlas/*=201
+Patch for Purists=1000
+Morrowind Code Patch/*/mcp=1100 # For assets, if any
 
 # ---------------------------------------------------------------------------
-# Priority 300-499: Landmass & Quest Mods
-# The main files for large-scale expansions.
+# Priority 2000-2999: Performance & Global Mesh Optimization
+# Global mesh replacers load early to be overridden by more specific meshes.
 # ---------------------------------------------------------------------------
-Tamriel Rebuilt=300
-Skyrim*Home*of*the*Nords*=301
-Province*Cyrodiil*=302
+Morrowind Optimization Patch/*=2000
+Project Atlas/*=2100
 
 # ---------------------------------------------------------------------------
-# Priority 500-699: Models & Textures
-# Body replacers, texture packs, and general graphical improvements.
+# Priority 3000-4999: Foundational Textures & Environmental Mods
+# Large-scale texture packs and landscape/flora overhauls.
+# More specific environmental mods should have a higher number.
 # ---------------------------------------------------------------------------
-Better Bodies/*/Data Files=500
-Better Heads=501
-Better Morrowind Armor ENG=510
-Real Signposts=550
+*HD*=3000
+*Upscal*=3001
+Vurt*s*Ashlands*Overhaul*=3500
+Vurt*s*Grazelands*Overhaul*=3501
+Remiros*Groundcover*/*=3600
 
 # ---------------------------------------------------------------------------
-# Priority 700-899: Gameplay & Immersion Mods
-# Mods that add new items, features, or change mechanics.
+# Priority 5000-5999: Architecture and City Overhauls
+# Mods that alter the appearance of cities and buildings.
 # ---------------------------------------------------------------------------
-Morrowind Rebirth*/*=700
-Morrowind Weapons Expansion/Data Files=710
-OpenMW Containers Animated/*=720
-Graphic Herbalism*/*=730
-WeaponSheathing*/*=740
+Beautiful Cities of Morrowind/*=5000
+RR*Mod*Series*Vivec*/*=5100
 
 # ---------------------------------------------------------------------------
-# Priority 900-9998: Patches for Other Mods
-# These files are designed to resolve conflicts and must load late.
+# Priority 6000-6999: Character & Body Mods
+# Body replacers, head packs, and NPC visual overhauls.
 # ---------------------------------------------------------------------------
-*patch*=9000
-*fix*=9001
+Better Bodies/*/Data Files=6000
+Robert*s*Bodies*/*=6001
+Westly*s*Pluginless*Head*Replacer*=6100
+Better Heads=6110
+More Better Baddies=6500
 
 # ---------------------------------------------------------------------------
-# Priority 9999: Catch-All
-# Anything not matched by a specific rule goes to the end.
+# Priority 7000-7999: Armor, Weapon, & Item Replacers
+# Mods that replace the appearance of existing items.
 # ---------------------------------------------------------------------------
-*=9999
+Better Morrowind Armor=7000
+Better Robes=7010
+*Armor*Replacer*=7100
+*Weapon*Replacer*=7200
+Real Signposts=7500
+OpenMW Containers Animated/*=7600
 
+# ---------------------------------------------------------------------------
+# Priority 8000-9999: Quests, Landmasses, & New Content
+# Major expansions that add new land, quests, and content.
+# Their assets should override most general visual replacers.
+# ---------------------------------------------------------------------------
+Tamriel Rebuilt=8000
+Skyrim*Home*of*the*Nords*=8100
+Province*Cyrodiil*=8200
+
+# ---------------------------------------------------------------------------
+# Priority 10000-19999: Gameplay, UI, & Immersion Mods
+# Mods that add new features, change mechanics, or alter the UI.
+# These should load late to ensure their assets (e.g., UI textures) win.
+# ---------------------------------------------------------------------------
+Morrowind Rebirth*/*=10000
+Graphic Herbalism*/*=11000
+WeaponSheathing*/*=11100
+AURA*/*=12000
+*UI*=15000
+*MWSE*/=18000
+*lua*/=18001
+
+# ---------------------------------------------------------------------------
+# Priority 20000-29999: Patches for Other Mods
+# Compatibility patches are designed to resolve conflicts and MUST load late.
+# ---------------------------------------------------------------------------
+*patch*=20000
+*fix*=20001
+*comp*=20002
+*patch for purists*=20003 # PFP patches need to load after PFP
+
+# ---------------------------------------------------------------------------
+# Priority 99999: Catch-All
+# Anything not matched by a specific rule goes near the end, but before
+# any final user overrides. This ensures un-sorted mods still load.
+# ---------------------------------------------------------------------------
+*=99999
 
 # ===========================================================================
 
 [content]
+## This is superseeded by `mlox` rules
 # ---------------------------------------------------------------------------
 # Priority 0-99: Core ESMs (Masters)
 # This is the absolute, unchangeable foundation of the game.
